packages/deployer/src/deployment-actions/kubectl-action/k8s-branch-deployment/testdata/kube.yaml
apiVersion: v1
data:
  password: dmVyeXNlY3JldAo
kind: Secret
metadata:
  annotations:
  name: xbakvinn
  namespace: default
  resourceVersion: "109999"
type: Opaque
---
apiVersion: batch/v1beta1
kind: CronJob
metadata:
  name: myservice-cronjob
spec:
  schedule: '30 17 * * 1-5'
  concurrencyPolicy: Replace
  jobTemplate:
    metadata:
      labels:
        app: myservice-cron
        origin: branch
        environment: dev
    spec:
      template:
        spec:
          containers:
            - name: myservice-cron
              image: DOCKER_IMAGE
              imagePullPolicy: IfNotPresent
              command: ['node', '.dist/job/run']
              env:
                - name: XBAKVINN_PASSWORD
                  valueFrom:
                    secretKeyRef:
                      name: xbakvinn
                      key: password
                - name: SERVER_EVENTS_CLUSTER_API
                  value: http://server-events-service
          restartPolicy: OnFailure
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: myservice-deployment
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: myservice-pod
        environment: dev
        origin: branch
    spec:
      containers:
        - name: myservice-pod
          image: DOCKER_IMAGE
          imagePullPolicy: IfNotPresent
          env:
            - name: DRAGON_ENV
              value: test
            - name: SERVICE_SUFFIX
              value: dev.domain.com
            - name: IN_CLUSTER
              value: 'YES'
            - name: FEATURES_ON
              value: 'true'
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 60
            timeoutSeconds: 4
            failureThreshold: 3
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            timeoutSeconds: 4

          ports:
            - containerPort: 80
              name: httpport
---
apiVersion: v1
kind: Service
metadata:
  name: myservice
  labels:
    name: myservice
    environment: dev
spec:
  ports:
    - port: 80 # the port that this service should serve on
      # the container on each pod to connect to, can be a name
      # (e.g. 'www') or a number (e.g. 80)
      name: serviceport
      targetPort: 80
      protocol: TCP
  # just like the selector in the replication controller,
  # but this time it identifies the set of pods to load balance
  # traffic to.
  selector:
    app: myservice-pod
    origin: branch
    environment: dev
  sessionAffinity: ClientIP
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myservice-http-ingress
spec:
  rules:
    - host: myservice.dev.domain.com
      http:
        paths:
          - backend:
              serviceName: myservice-http
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myservice-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: myservice.dev.domain.com
      http:
        paths:
          - backend:
              serviceName: myservice
              servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myservice-path-ingress
  namespace: default
  labels:
    app: myservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
    - host: api.dev.domain.com
      http:
        paths:
          - path: /myservice
            backend:
              serviceName: myservice
              servicePort: 80
  tls:
    - hosts:
        - api.dev.domain.com
      secretName: services-cert
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myservice-path-ingress-2
  namespace: default
  labels:
    app: myservice
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  rules:
    - host: api.dev.domain.com
      http:
        paths:
          - path: myservice/test
            backend:
              serviceName: myservice
              servicePort: 80
  tls:
    - hosts:
        - api.dev.domain.com
      secretName: services-cert
